--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,25 @@
 {
   "name": "docker_todo_backend",
   "version": "1.0.0",
-  "description": "backend for my todo app built using docker",
+  "description": "backend for my baby tracking app built using docker",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.2",
+    "nodemon": "^2.0.22",
+    "simple-node-logger": "^21.8.12"
   }
 }
