--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -5,6 +5,6 @@
     },
     "development":{
         "PORT": 3001,
-        "MONGODB_URI": "mongodb://mongo:27017/TodoApp"
+        "MONGODB_URI": "mongodb://mongo:27017/trackThatBaby"
     }
 }
