--- a/compose.yaml
+++ b/compose.yaml
@@ -20,7 +20,7 @@ services:
     container_name: server
     restart: always
     build:
-      context: server
+      context: backend
       target: development
       args: 
         NODE_PORT: 3001
@@ -35,7 +35,7 @@ services:
       - express-mongo
       - react-express
     expose:
-      - 3000
+      - 3001
   mongo:
     container_name: mongo
     restart: always
