--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,15 +18,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Set up Docker buildx
+        name: Build and push frontend image
         uses: docker/setup-buildx-action@v2
+        with:
+          context: frontend
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
       -
-        name: Build and push
+        name: Build and push backend image
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./compose.yaml
+          context: backend
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+      - 
+        name: Build and push Mongo image
+        run: docker pull mongo:4.2.0 && docker tag mongo:4.2.0 ${{ secrets.DOCKERHUB_USERNAME }}/mongo:latest
       
     
