--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,20 +19,26 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push frontend image
-        uses: docker/setup-buildx-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: frontend
+          file: ./compose.yaml
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:frontend:latest
       -
         name: Build and push backend image
         uses: docker/build-push-action@v4
         with:
           context: backend
+          file: ./compose.yaml
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:backend:latest
       - 
         name: Build and push Mongo image
-        run: docker pull mongo:4.2.0 && docker tag mongo:4.2.0 ${{ secrets.DOCKERHUB_USERNAME }}/mongo:latest
-      
+        uses: docker/build-push-action@v4
+        with:
+          context: mongo
+          file: ./compose.yaml
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:mongo-4.2.0
     
