--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           context: frontend
           file: ./compose.yaml
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:frontend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:frontend-latest
       -
         name: Build and push backend image
         uses: docker/build-push-action@v4
@@ -32,7 +32,7 @@ jobs:
           context: backend
           file: ./compose.yaml
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:backend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/trackthatbaby:backend-latest
       - 
         name: Build and push Mongo image
         uses: docker/build-push-action@v4
